--- a/CoolSerializer.V3/CoolSerializer.V3.csproj
+++ b/CoolSerializer.V3/CoolSerializer.V3.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoundCollectionTypeInfo.cs" />
     <Compile Include="Deserializer.cs" />
     <Compile Include="GuidMarshaler.cs" />
     <Compile Include="Program.cs" />
