--- a/CoolSerializer.V3/CoolSerializer.V3.csproj
+++ b/CoolSerializer.V3/CoolSerializer.V3.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoundCollectionTypeInfo.cs" />
+    <Compile Include="BoundTypeInfo.cs" />
     <Compile Include="Deserializer.cs" />
     <Compile Include="GuidMarshaler.cs" />
     <Compile Include="ISimplifersProvider.cs" />
