--- a/CoolSerializer.V3/CoolSerializer.V3.csproj
+++ b/CoolSerializer.V3/CoolSerializer.V3.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GuidMarshaler.cs" />
     <Compile Include="ISimplifersProvider.cs" />
     <Compile Include="KVPSimplifier.cs" />
+    <Compile Include="MethodMutationHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer.cs" />
