Added a risky implementation of UknownObject

--- a/CoolSerializer.V3/CoolSerializer.V3.csproj
+++ b/CoolSerializer.V3/CoolSerializer.V3.csproj
@@ -71,6 +71,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>IDocumentWriter.tt</DependentUpon>
     </Compile>
+    <Compile Include="UnknownObjectTypeInfoProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
